GearsetPOC/force-app/main/default/objects/Accounts_Service_Integration_Settings__c/Accounts_Service_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Accounts Service Integration Settings</label>
</CustomObject>