GearsetPOC/force-app/main/default/objects/Accounts_Service_Integration_Settings__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>