GearsetPOC/force-app/main/default/objects/Accounts_Service_Integration_Settings__c/fields/Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Url__c</fullName>
    <label>Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>