GearsetPOC/force-app/main/default/objects/Accounts_Service_Integration_Settings__c/fields/Future_Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>Future_Record_Limit__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Future Record Limit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>